# aiod_napari

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  ai-od.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml  test_and_deploy.yml  test_ci.yml  test_pypi.yml
_tests/: test_reader.py  test_widget.py
src/ai_on_demand/: io.py  napari.yaml  utils.py  widget_classes.py
src/ai_on_demand/evaluation/: evaluation_widget.py
src/ai_on_demand/finetune/: __init__.py  finetune_params.py  finetune_widget.py  nxf.py
src/ai_on_demand/inference/: __init__.py  config_widget.py  data_selection.py  inference_widget.py  mask_export.py  model_selection.py  nxf.py  preprocess.py  tasks.py
src/ai_on_demand/postprocessing/: filter_masks.py  merge_masks.py  morph_masks.py  postprocess_widget.py
src/aiod_napari/: __init__.py  example_data.py  io.py  load_manifests.py  napari.yaml  qcollapsible.py  utils.py  widget_classes.py
src/aiod_napari/evaluation/: __init__.py  evaluation_widget.py  metrics.py
src/aiod_napari/inference/: __init__.py  config_widget.py  data_selection.py  inference_widget.py  mask_export.py  model_selection.py  nxf.py  preprocess.py  tasks.py
src/aiod_napari/postprocessing/: __init__.py  filter_masks.py  merge_masks.py  morph_masks.py  postprocess_widget.py
tests/: conftest.py  smoke_test.py  test_inference.py  test_reader.py
