[project]
name = "ai-on-demand"
dynamic = ["version"]
description = "A plugin for segmenting images using AI models via the Segment-Flow Nextflow pipeline."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Cameron Shand", email = "cameron.shand@crick.ac.uk"},
    {name = "Numan Ahmed", email = "numan.ahmed@crick.ac.uk"},
    {name = "Fiona Young", email = "fiona.young@crick.ac.uk"},
    {name = "Qin Yu", email = "qin.yu@crick.ac.uk"},
    {name = "Jon Smith", email = "jon.smith@crick.ac.uk"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "qtpy",
    "scikit-image>0.20",
    "platformdirs",
    "requests",
    "napari>=0.6",
    "scipy",
    "pyyaml",
    "pandas",
    "tabulate",
    "glasbey",
    "dask-image",
    "aiod_utils @ git+https://github.com/FrancisCrickInstitute/aiod_utils.git",
    "aiod_registry @ git+https://github.com/FrancisCrickInstitute/AIoD-Model-Registry.git",
]

[project.optional-dependencies]
testing = [
    "tox",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "napari",
    "pyqt5",
]

[project.entry-points."napari.manifest"]
ai-on-demand = "ai_on_demand:napari.yaml"



[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]


[tool.setuptools.dynamic]
version = {attr = "ai_on_demand.__init__.__version__"}

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow/compute-intensive (run with --run-slow)",
]

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some of merged with statements are not looking great with black, reanble after drop python 3.9
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

fix = true
